--- a/Index.html
+++ b/Index.html
@@ -71,22 +71,27 @@
         <section id="contato">
             <div class="container p-5 d-flex justify-content-center">
                 <div class="col-md-8 col-lg-10 rounded-5 formulario"> <!-- Caixa do formulário com 60% de largura -->
-                    <h2 class="mb-3">Entre em contato</h2>
+                    <h2 class="mb-3">Cadastre o seu bichinho</h2>
                     <form>
                         <div class="form-group mb-3">
                             <label for="nome">Nome</label>
                             <input type="text" id="nome" name="nome" class="form-control rounded-3 mt-1"
-                                placeholder="Digite seu nome completo">
+                                placeholder="Digite o nome dele completo">
                         </div>
                         <div class="form-group mb-3">
                             <label for="email">Email</label>
                             <input type="email" id="email" name="email" class="form-control rounded-3 mt-1"
                                 placeholder="Digite seu email">
+                            </div>
+                        <div class="form-group mb-3">
+                            <label for="email">Como o ṕodemos o chamar</label>
+                            <input type="email" id="email" name="email" class="form-control rounded-3 mt-1"
+                                placeholder="Digite o apelido do bichinho">
                         </div>
                         <div class="form-group mb-3">
                             <label for="mensagem">Mensagem</label>
                             <textarea id="mensagem" name="mensagem" class="form-control rounded-4 mt-2" rows="4"
-                                placeholder="Escreva sua mensagem"></textarea>
+                                placeholder="Nos conte um pouco mais sobre o bichinho"></textarea>
                         </div>
                         <div class="d-grid gap-2">
                             <button type="submit" class="btn btn-primary btn-lg rounded-pill tamanho-botao">Enviar
