Replace Bootstrap CSS link with an image link

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Juntos para Sempre</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpt.vecteezy.com%2Farte-vetorial%2F16970577-logotipo-do-veterinario-da-cruz-medica-do-cavalo&psig=AOvVaw0jhagtRh-FbjxSti-reux7&ust=1763936257672000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCLCUhenkhpEDFQAAAAAdAAAAABAL">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
