Refactor HTML structure and update meta tags

--- a/Index.html
+++ b/Index.html
@@ -1,120 +1,27 @@
-<!doctype html>
-<html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Juntos para Sempre — Clínica Veterinária</title>
-  <meta name="description" content="Juntos para Sempre — Clínica Veterinária. Em construção. Em breve: consultas, cirurgias, vacinação e muito mais." />
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="data:,">
-  <!-- Fonte suave -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compartible" content="IE=edge"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="brand">
-        <h1>Juntos para Sempre</h1>
-        <p class="tag">Clínica Veterinária</p>
-      </div>
-      <nav class="nav">
-        <a href="#sobre">Sobre</a>
-        <a href="#servicos">Serviços</a>
-        <a href="#contato">Contato</a>
-      </nav>
-    </div>
-  </header>
+    <!-- header-->
+    <header>
+        <!-- container -->
+        <div class="container">
+            <nav>
+                <a href="index.html"> 
+                    <img src="img/manssourit-removebg-preview.png" alt="logo">
+                </a>
+            </nav>
 
-  <main>
-    <section class="hero">
-      <div class="container hero-card">
-        <div class="badge">Em construção</div>
-        <h2>Bem-vindo à Juntos para Sempre</h2>
-        <p class="lead">
-          Um espaço de cuidado com amor para seus bichinhos. Estamos construindo algo especial — em breve ofereceremos uma clínica completa com atendimento humanizado.
-        </p>
-        <a class="cta" href="#contato">Fale conosco</a>
-      </div>
-    </section>
+        </div>
+        <!--end container-->
+    
 
-    <section id="sobre" class="section container">
-      <h3>Sobre nós</h3>
-      <p>
-        Juntos para Sempre é uma clínica veterinária dedicada ao bem-estar de animais de companhia. Nossa missão é oferecer atendimento de qualidade,
-        com carinho e profissionalismo. Enquanto o site está em construção, estamos organizando nossa estrutura para oferecer o melhor serviço.
-      </p>
-      <ul class="values">
-        <li><strong>Missão:</strong> Cuidar com respeito e empatia.</li>
-        <li><strong>Visão:</strong> Ser referência em atendimento veterinário local.</li>
-        <li><strong>Valores:</strong> Amor pelos animais, ética e transparência.</li>
-      </ul>
-    </section>
-
-    <section id="servicos" class="section container">
-      <h3>Serviços que ofereceremos</h3>
-      <p>Em breve disponibilizaremos os seguintes serviços:</p>
-
-      <div class="services-grid">
-        <article class="service">
-          <h4>Consultas</h4>
-          <p>Avaliação clínica completa para cães e gatos.</p>
-        </article>
-
-        <article class="service">
-          <h4>Vacinação</h4>
-          <p>Protocolos de vacinação atualizados e personalizados.</p>
-        </article>
-
-        <article class="service">
-          <h4>Cirurgias</h4>
-          <p>Procedimentos cirúrgicos com equipe qualificada.</p>
-        </article>
-
-        <article class="service">
-          <h4>Emergência e Urgência</h4>
-          <p>Atendimento emergencial para casos críticos.</p>
-        </article>
-
-        <article class="service">
-          <h4>Banho & Tosa</h4>
-          <p>Higiene e estética com cuidado e segurança.</p>
-        </article>
-
-        <article class="service">
-          <h4>Exames Laboratoriais</h4>
-          <p>Diagnóstico rápido para um tratamento mais eficaz.</p>
-        </article>
-
-        <article class="service">
-          <h4>Castração</h4>
-          <p>Procedimento com protocolos de segurança e recuperação.</p>
-        </article>
-
-        <article class="service">
-          <h4>Atendimento Domiciliar</h4>
-          <p>Visitas a domicílio para pacientes que necessitam.</p>
-        </article>
-      </div>
-    </section>
-
-    <section id="contato" class="section contact container">
-      <h3>Contato</h3>
-      <p>Quer saber mais ou agendar? Envie um e-mail ou telefone assim que estivermos pra valer.</p>
-      <p class="muted">E-mail: contato@juntosparasempre.example (placeholder)</p>
-      <p class="muted">Telefone: (00) 0 0000-0000 (placeholder)</p>
-    </section>
-  </main>
-
-  <footer class="site-footer">
-    <div class="container">
-      <p>© <span id="year"></span> Juntos para Sempre — Todos os direitos reservados.</p>
-      <p class="small muted">Site em construção</p>
-    </div>
-  </footer>
-
-  <script>
-    // Atualiza ano no rodapé
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+    </header>
+      <!-- END HEADER-->
 </body>
 </html>
