--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+!<DOCTYPE html>
+<html l!ang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compartible" content="IE=edge"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   
+    <title>Website html css e javascript</title>
 </head>
 <body>
     <!-- header-->
@@ -15,6 +16,14 @@
                 <a href="index.html"> 
                     <img src="img/manssourit-removebg-preview.png" alt="logo">
                 </a>
+                <ul class="ul">
+                    <a href="index.html">Home</a>
+                    <a href="sobre.html">Sobre</a>
+                    <a href="servicos.html">Servicos</a>
+                    <a href="contacto.html">Contacto</a>
+                    
+                
+                </ul>
             </nav>
 
         </div>
