--- a/index.html
+++ b/index.html
@@ -1,71 +1,391 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Veterinária Juntos para Sempre</title>
-<style>
-  /* Layout geral */
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #003f7f; /* azul escuro */
-    color: white;
-  }
-  header, footer {
-    background-color: white;
-    color: #003f7f;
-    padding: 20px;
-    text-align: center;
-  }
-  main {
-    background-color: white;
-    color: black;
-    padding: 20px;
-  }
-  h1, h2 {
-    margin-top: 0;
-  }
-  /* Responsividade */
-  @media (max-width: 768px) {
-    header, footer, main {
-      padding: 15px;
-    }
-    body {
-      font-size: 16px;
-    }
-  }
-  @media (min-width: 769px) {
-    body {
-      font-size: 18px;
-    }
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Veterinária Juntos para Sempre</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            background: linear-gradient(135deg, #003f7f 0%, #0052a3 100%);
+            color: white;
+            overflow-x: hidden;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        /* Header */
+        header {
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            padding: 1.5rem 0;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo {
+            font-size: 2rem;
+            font-weight: bold;
+            color: #003f7f;
+        }
+
+        .nav-links {
+            display: flex;
+            list-style: none;
+            gap: 2rem;
+        }
+
+        .nav-links a {
+            color: #003f7f;
+            text-decoration: none;
+            font-weight: 500;
+            transition: color 0.3s;
+        }
+
+        .nav-links a:hover {
+            color: #0052a3;
+        }
+
+        /* Hero Section */
+        .hero {
+            background: linear-gradient(135deg, rgba(0, 63, 127, 0.9), rgba(0, 82, 163, 0.9));
+            padding: 150px 0 100px;
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-size: clamp(2.5rem, 5vw, 4rem);
+            margin-bottom: 1rem;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+        }
+
+        .hero p {
+            font-size: clamp(1.1rem, 2.5vw, 1.5rem);
+            margin-bottom: 2rem;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .cta-button {
+            display: inline-block;
+            background: #ff6b35;
+            color: white;
+            padding: 1rem 2.5rem;
+            text-decoration: none;
+            border-radius: 50px;
+            font-weight: bold;
+            font-size: 1.1rem;
+            transition: all 0.3s;
+            box-shadow: 0 5px 15px rgba(255, 107, 53, 0.4);
+        }
+
+        .cta-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(255, 107, 53, 0.6);
+        }
+
+        /* Services Section */
+        .services {
+            background: white;
+            padding: 100px 0;
+            color: #333;
+        }
+
+        .services h2 {
+            text-align: center;
+            font-size: clamp(2rem, 4vw, 3rem);
+            margin-bottom: 3rem;
+            color: #003f7f;
+        }
+
+        .services-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+        }
+
+        .service-card {
+            background: #f8f9ff;
+            padding: 2.5rem;
+            border-radius: 20px;
+            text-align: center;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s;
+            border-top: 4px solid #ff6b35;
+        }
+
+        .service-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
+        }
+
+        .service-card h3 {
+            color: #003f7f;
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+        }
+
+        /* About Section */
+        .about {
+            padding: 100px 0;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+        }
+
+        .about-content {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 4rem;
+            align-items: center;
+        }
+
+        .about-text h2 {
+            font-size: 2.5rem;
+            margin-bottom: 1.5rem;
+            color: #fff;
+        }
+
+        /* Contact Section */
+        .contact {
+            background: white;
+            padding: 100px 0;
+            color: #333;
+        }
+
+        .contact h2 {
+            text-align: center;
+            font-size: 2.5rem;
+            margin-bottom: 3rem;
+            color: #003f7f;
+        }
+
+        .contact-info {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+            margin-bottom: 3rem;
+        }
+
+        .contact-item {
+            text-align: center;
+            padding: 2rem;
+            background: #f8f9ff;
+            border-radius: 15px;
+        }
+
+        /* Footer */
+        footer {
+            background: #003f7f;
+            padding: 3rem 0 1.5rem;
+            text-align: center;
+        }
+
+        .footer-content {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+            margin-bottom: 2rem;
+        }
+
+        .footer-section h3 {
+            color: #ff6b35;
+            margin-bottom: 1rem;
+        }
+
+        /* Mobile Menu */
+        .mobile-menu {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+        }
+
+        .mobile-menu span {
+            width: 30px;
+            height: 4px;
+            background: #003f7f;
+            margin: 3px 0;
+            transition: 0.3s;
+        }
+
+        /* Responsive */
+        @media (max-width: 768px) {
+            .nav-links {
+                display: none;
+            }
+
+            .mobile-menu {
+                display: flex;
+            }
+
+            .about-content {
+                grid-template-columns: 1fr;
+                gap: 2rem;
+            }
+
+            .hero {
+                padding: 120px 0 80px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 0 15px;
+            }
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Veterinária Juntos para Sempre</h1>
-  </header>
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <nav>
+                <div class="logo">🐾 Juntos para Sempre</div>
+                <ul class="nav-links">
+                    <li><a href="#home">Início</a></li>
+                    <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+                <div class="mobile-menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </nav>
+        </div>
+    </header>
 
-  <main>
-    <section>
-      <h2>Sobre Nós</h2>
-      <p>Oferecemos cuidados veterinários com muito amor e profissionalismo para seu melhor amigo.</p>
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <div class="container">
+            <h1>Juntos para Sempre</h1>
+            <p>Cuidamos do seu melhor amigo com amor, dedicação e os mais modernos tratamentos veterinários.</p>
+            <a href="#contato" class="cta-button">Agende sua Consulta</a>
+        </div>
     </section>
-    <section>
-      <h2>Serviços</h2>
-      <ul>
-        <li>Consultas Gerais</li>
-        <li>Vacinação</li>
-        <li>Cirurgias</li>
-        <li>Exames laboratoriais</li>
-        <li>Emergência 24h</li>
-      </ul>
-    </section>
-  </main>
 
-  <footer>
-    <p>Contato: (00) 1234-5678 | Endereço: Rua dos Animais, 123</p>
-  </footer>
+    <!-- Services Section -->
+    <section id="servicos" class="services">
+        <div class="container">
+            <h2>Nossos Serviços</h2>
+            <div class="services-grid">
+                <div class="service-card">
+                    <h3>🩺 Consultas Gerais</h3>
+                    <p>Atendimento completo para check-up, diagnóstico e acompanhamento da saúde do seu pet.</p>
+                </div>
+                <div class="service-card">
+                    <h3>💉 Vacinação</h3>
+                    <p>Calendário vacinal completo com as principais vacinas para proteção total.</p>
+                </div>
+                <div class="service-card">
+                    <h3>🔬 Cirurgias</h3>
+                    <p>Cirurgias gerais e especializadas com anestesia segura e recuperação assistida.</p>
+                </div>
+                <div class="service-card">
+                    <h3>🩸 Exames</h3>
+                    <p>Laboratório completo com hemograma, ultrassom, raio-X e mais.</p>
+                </div>
+                <div class="service-card">
+                    <h3>⚡ Emergência 24h</h3>
+                    <p>Plantão 24 horas para emergências com equipe especializada sempre pronta.</p>
+                </div>
+                <div class="service-card">
+                    <h3>🛁 Banho & Tosa</h3>
+                    <p>Serviços de estética animal com produtos hipoalergênicos e profissionais qualificados.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="sobre" class="about">
+        <div class="container">
+            <div class="about-content">
+                <div class="about-text">
+                    <h2>15 Anos de Dedicação</h2>
+                    <p>Desde 2010 cuidando com amor dos pets da nossa comunidade. Nossa equipe é formada por veterinários especializados e auxiliares apaixonados por animais.</p>
+                    <p>Contamos com estrutura moderna, equipamentos de última geração e foco total no bem-estar animal.</p>
+                    <ul style="margin-top: 1rem; padding-left: 1.5rem;">
+                        <li>+5.000 pets atendidos</li>
+                        <li>Equipe de 12 profissionais</li>
+                        <li>Atendimento 24 horas</li>
+                        <li>99% de satisfação</li>
+                    </ul>
+                </div>
+                <div style="text-align: center;">
+                    <div style="font-size: 4rem; margin-bottom: 1rem;">❤️</div>
+                    <h3>Amor em cada consulta</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contato" class="contact">
+        <div class="container">
+            <h2>Entre em Contato</h2>
+            <div class="contact-info">
+                <div class="contact-item">
+                    <div style="font-size: 2.5rem; margin-bottom: 1rem;">📞</div>
+                    <h3>(11) 99999-9999</h3>
+                    <p>Emergência 24h</p>
+                </div>
+                <div class="contact-item">
+                    <div style="font-size: 2.5rem; margin-bottom: 1rem;">📍</div>
+                    <h3>Rua dos Pets, 123</h3>
+                    <p>Jardim Animal - SP</p>
+                </div>
+                <div class="contact-item">
+                    <div style="font-size: 2.5rem; margin-bottom: 1rem;">✉️</div>
+                    <h3>contato@juntosporasempre.com</h3>
+                    <p>Seg-Sex: 8h às 20h</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Veterinária Juntos para Sempre</h3>
+                    <p>Cuidando com amor desde 2010</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Horário</h3>
+                    <p>Seg-Sáb: 8h-20h<br>Dom: 9h-18h<br>Emergência 24h</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Redes Sociais</h3>
+                    <p>Instagram<br>Facebook<br>WhatsApp</p>
+                </div>
+            </div>
+            <div style="border-top: 1px solid #fff3; padding-top: 1.5rem; margin-top: 2rem;">
+                <p>&copy; 2025 Veterinária Juntos para Sempre. Todos os direitos reservados.</p>
+            </div>
+        </div>
+    </footer>
 </body>
-</html>
+                                                    </html>
